@@ -8,6 +8,6 @@ void btest007::program(void)
   x = "hello";
   y = 2;
   z = y * y;
-  (((((basic_print_string(0, x, 0) + basic_print_char(0, 9)) + basic_print_integer(0, y, 0, 10)) + basic_print_char(0, 9)) + basic_print_integer(0, z, 0, 10)) + basic_print_nl(0));
+  printf("%s\\t%d\\t%d\\n", x, y, z);
 }
 
