@@ -1,6 +1,7 @@
 Version 3.9.34
 - Fixed in-function array declarations in BASIC
 - Fixed using constant members in const declarations in BASIC
+- Use printf for translating BASIC print statements
 
 Version 3.9.33
 - Fixed a bug in encoding wrlut and rdlut instructions in rev 2a
